# kalfa

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: version-bump.yml
runner/: README.md  main.py  pyproject.toml
src/kalfa/: main.py
