[project]
name = "kalfa"
version = "2026.02.19"
description = "My kalfa once said..."
readme = "README.md"
authors = [{ name = "Hasan Sezer Taşan", email = "hasansezertasan@gmail.com" }]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
kalfa = "kalfa.main:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
