[project]
name = "kalfa-runner"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = ["kalfa"]


[tool.uv.sources]
kalfa = { git = "https://github.com/hasansezertasan/kalfa" }


[tool.pycrucible]
entrypoint = "main.py"


[tool.pycrucible.patterns]
include = ["main.py"]
exclude = ["uv.lock", "**/__pycache__/**"]


[tool.pycrucible.options]
debug = true
extract_to_temp = true
delete_after_run = true  # NOTE: This makes it use the latest dependencies.
